--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode development",
-    "prod-build": "webpack --mode production"
+    "prod-build": "webpack --mode production",
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -19,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "regenerator-runtime": "^0.13.7",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
